# medrec-app

./: .gitignore  .prettierrc.js  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish-gh-pages.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 83b608ed17bc_create_animals_table.py  ed572ae4a768_add_events_and_context_tables.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: animal.py  context.py  event.py
backend/app/routers/: animals.py  context.py  events.py
backend/app/schemas/: animal.py  context.py  event.py
backend/tests/: conftest.py  test_animals.py  test_context.py  test_events.py
src/: App.tsx  index.css
src/components/AnimalForm/: AnimalForm.module.css  AnimalForm.tsx
src/components/EventTimeline/: EventCard.tsx  EventTimeline.css  EventTimeline.tsx  WeightChart.tsx
src/components/FileDropZone/: FileDropZone.css  FileDropZone.module.css  FileDropZone.tsx
src/components/FormBlocks/: event-form.css
src/components/FormSection/: FormSection.css  FormSection.tsx
src/components/Layout/: Layout.css  Layout.module.css  Layout.tsx
src/context/: MedRecContext.tsx  MedRecContextProvider.tsx
src/hooks/: useFileExport.ts  useFileImport.ts
src/lib/: utils.ts
src/pages/: AnimalPage.css  AnimalPage.module.css  AnimalPage.tsx  HomePage.css  HomePage.module.css  HomePage.tsx  SettingsPage.css  SettingsPage.tsx
src/types/: appContext.ts  medicalContext.ts  metadata.ts  schema.ts
src/utils/: formatting.ts  utils.ts
(+40 files in other folders)
